day-9-CNI Networking, Ingress & NGINX Ingress, Persistent Volumes & PVC, and Liveness & Readiness Probes/manifests/02-ingress/app1.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: nginx
        ports:
        - containerPort: 80
