day-9-CNI Networking, Ingress & NGINX Ingress, Persistent Volumes & PVC, and Liveness & Readiness Probes/manifests/02-ingress/app2.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: httpd
        ports:
        - containerPort: 80
