day-9-CNI Networking, Ingress & NGINX Ingress, Persistent Volumes & PVC, and Liveness & Readiness Probes/manifests/02-ingress/app1-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
