day-9-CNI Networking, Ingress & NGINX Ingress, Persistent Volumes & PVC, and Liveness & Readiness Probes/manifests/02-ingress/app2-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
